FIX: Increase z-index for reservation element and add global.json
Raised the z-index of a reservation element in Reservations.scss to 3 for improved stacking. Added global.json to specify .NET SDK version and configuration.

--- a/educhemlp.client/src/pages/app/Reservations.scss
+++ b/educhemlp.client/src/pages/app/Reservations.scss
@@ -246,7 +246,7 @@
             top: 24px;
             left: 50%;
             transform: translate(-50%, 0);
-            z-index: 2;
+            z-index: 3;
             border-radius: 12px;
             pointer-events: none;
             user-select: none;
